--- a/index.html
+++ b/index.html
@@ -6,23 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utility.css">
-    <title>Spotify</title>
+    <title>Spotify - Web Player: Music for everyone</title>
 </head>
 
 <body>
     <div class="container flex bg-black">
         <div class="left">
+            <div class="close">
+                <img class="invert" src="img/close.svg" alt="">
+            </div>
             <div class="home bg-grey rounded m-1 p-1">
-                <div class="logo"><img class="invert" src="logo.svg" alt=""></div>
+                <div class="logo"><img width="110" class="invert" src="img/logo.svg" alt=""></div>
                 <ul>
-                    <li><img class="invert" src="home.svg" alt="home">Home</li>
-                    <li><img class="invert" src="search.svg" alt="search">Search</li>
+                    <li><img class="invert" src="img/home.svg" alt="home">Home</li>
+                    <li><img class="invert" src="img/search.svg" alt="search">Search</li>
                 </ul>
             </div>
             <div class="library bg-grey rounded m-1 p-1">
                 <div class="heading">
-                    <img class="invert" src="playlist.svg" alt="">
+                    <img class="invert" src="img/playlist.svg" alt="">
                     <h2>Your Library</h2>
+                </div>
+
+                <div class="songList">
+                    <ul>
+
+                    </ul>
                 </div>
 
                 <div class="footer">
@@ -40,59 +49,57 @@
         <div class="right bg-grey rounded ">
             <div class="header">
                 <div class="nav">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                        class="feather feather-chevron-left">
-                        <polyline points="15 18 9 12 15 6"></polyline>
-                    </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                        class="feather feather-chevron-right">
-                        <polyline points="9 18 15 12 9 6"></polyline>
-                    </svg>
+                    <div class="hamburgerContainer">
+                        <img width="40" class="invert hamburger" src="img/hmaburger.svg" alt="">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                            class="feather feather-chevron-left">
+                            <polyline points="15 18 9 12 15 6"></polyline>
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                            class="feather feather-chevron-right">
+                            <polyline points="9 18 15 12 9 6"></polyline>
+                        </svg>
+                    </div>
                 </div>
                 <div class="buttons">
-                    <button>Sign up</button>
-                    <button>Log in</button>
+                    <button class="signupbtn">Sign up</button>
+                    <button class="loginbtn">Log in</button>
                 </div>
             </div>
             <div class="spotify-playlists">
                 <h1>Spotify Playlists</h1>
                 <div class="cardContainer">
-                    <div class="card">
-                        <div class="play">
-                            <svg width="11px" height="14px" viewBox="0 0 11 14" version="1.1"
-                                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                <!-- Generator: Sketch 52.5 (67469) - http://www.bohemiancoding.com/sketch -->
-                                <title>play_arrow</title>
-                                <desc>Created with Sketch.</desc>
-                                <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                    <g id="Rounded" transform="translate(-753.000000, -955.000000)">
-                                        <g id="AV" transform="translate(100.000000, 852.000000)">
-                                            <g id="-Round-/-AV-/-play_arrow"
-                                                transform="translate(646.000000, 98.000000)">
-                                                <g>
-                                                    <rect id="Rectangle-Copy-50" x="0" y="0" width="24" height="24">
-                                                    </rect>
-                                                    <path
-                                                        d="M7,6.82 L7,17.18 C7,17.97 7.87,18.45 8.54,18.02 L16.68,12.84 C17.3,12.45 17.3,11.55 16.68,11.15 L8.54,5.98 C7.87,5.55 7,6.03 7,6.82 Z"
-                                                        id="🔹Icon-Color" fill="#1D1D1D"></path>
-                                                </g>
-                                            </g>
-                                        </g>
-                                    </g>
-                                </g>
-                            </svg>
-                        </div>
-                        <img src="https://i.scdn.co/image/ab67706f00000002c61f28bb8f3662ae8f720848" alt="">
-                        <h2>Party Hits</h2>
-                        <p>A mix of the biggest pop, dance, and hip hop party songs.</p>
-                    </div>
 
-                    <div class="card">
-                        <img src="https://i.scdn.co/image/ab67706f00000002c61f28bb8f3662ae8f720848" alt="">
-                        <h2>Party Hits</h2>
-                        <p>A mix of the biggest pop, dance, and hip hop party songs.</p>
+                </div>
+                <div class="playbar">
+                    <div class="seekbar">
+                        <div class="circle">
+
+                        </div>
+                    </div>
+                    <div class="abovebar">
+
+                        <div class="songinfo">
+
+                        </div>
+                        <div class="songbuttons">
+                            <img width="35" id="previous" src="img/prevSong.svg" alt="">
+                            <img width="35" id="play" src="img/play.svg" alt="">
+                            <img width="35" id="next" src="img/nextSong.svg" alt="">
+                        </div>
+                        <div class="timevol">
+                            <div class="songtime">
+
+                            </div>
+                            <div class="volume">
+                                <img width="25" src="img/volume.svg" alt="">
+                                <div class="range">
+                                    <input type="range" name="volume" id="">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
